--- a/ROS_ImageUtils/ROS_ImageWPF.csproj
+++ b/ROS_ImageUtils/ROS_ImageWPF.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{E0E04AFE-E2CF-4A04-A331-76FE05DCC749}</ProjectGuid>
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ROS_ImageUtils</RootNamespace>
-    <AssemblyName>ROS_ImageUtils</AssemblyName>
+    <RootNamespace>ROS_ImageWPF</RootNamespace>
+    <AssemblyName>ROS_ImageWPF</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
