XmlRpc_Wrapper: move logging helpers into separate Utils class

--- a/XmlRpc_Wrapper/XmlRpc_Wrapper.csproj
+++ b/XmlRpc_Wrapper/XmlRpc_Wrapper.csproj
@@ -89,6 +89,7 @@
     <Compile Include="XmlRpcServer.cs" />
     <Compile Include="XMLRPCCallWrapper.cs" />
     <Compile Include="XmlRpcSource.cs" />
+    <Compile Include="XmlRpcUtil.cs" />
     <Compile Include="XmlRpcValue.cs" />
   </ItemGroup>
   <ItemGroup>
