--- a/ROS_ImageUtils/ROS_ImageWPF.csproj
+++ b/ROS_ImageUtils/ROS_ImageWPF.csproj
@@ -73,8 +73,7 @@
     <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Messages, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Messages">
       <HintPath>..\Messages\Messages.dll</HintPath>
     </Reference>
     <Reference Include="System" />
