--- a/ROS_Comm/ROS_C-Sharp.csproj
+++ b/ROS_Comm/ROS_C-Sharp.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Connection.cs" />
     <Compile Include="ConnectionManager.cs" />
     <Compile Include="DLL.cs" />
+    <Compile Include="RemappingHelper.cs" />
     <Compile Include="ServiceClientLink.cs" />
     <Compile Include="LocalSubscriberLink.cs" />
     <Compile Include="LocalPublisherLink.cs" />
