DynamicReconfigure: Expose an instrumentation interface to allow bi-directional state sharing between a DynamicReconfigurePage and another UIElement
And redo layouts so everything matches ROS's dynamic_reconfigure's except for window auto-sizing and styling.

--- a/DynamicReconfigureSharp/DynamicReconfigureSharp.csproj
+++ b/DynamicReconfigureSharp/DynamicReconfigureSharp.csproj
@@ -111,6 +111,7 @@
     <Compile Include="DynamicReconfigurePage.xaml.cs">
       <DependentUpon>DynamicReconfigurePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="IDynamicReconfigureLayout.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
