Add a class to periodically publish a CompressedImage of what a given WPF Window is displaying on a specified topic, at a specified rate

--- a/ROS_ImageUtils/ROS_ImageWPF.csproj
+++ b/ROS_ImageUtils/ROS_ImageWPF.csproj
@@ -163,6 +163,7 @@
     <Compile Include="SlaveImage.xaml.cs">
       <DependentUpon>SlaveImage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WindowScraper.cs" />
     <Page Include="CompressedImageControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
