--- a/ROS_Comm/ROS_C-Sharp.csproj
+++ b/ROS_Comm/ROS_C-Sharp.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Connection.cs" />
     <Compile Include="ConnectionManager.cs" />
     <Compile Include="DLL.cs" />
+    <Compile Include="MessageAndSerializerFunc.cs" />
     <Compile Include="RemappingHelper.cs" />
     <Compile Include="ServiceClientLink.cs" />
     <Compile Include="LocalSubscriberLink.cs" />
