--- a/MD5SumTest/MD5SumTest.csproj
+++ b/MD5SumTest/MD5SumTest.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{D15B296F-7EBC-43AA-BD2B-0292AA5F9A38}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestProject2</RootNamespace>
-    <AssemblyName>TestProject2</AssemblyName>
+    <RootNamespace>MD5SumTest</RootNamespace>
+    <AssemblyName>MD5SumTest</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
