--- a/ROS_Comm/ROS_C-Sharp.csproj
+++ b/ROS_Comm/ROS_C-Sharp.csproj
@@ -106,6 +106,10 @@
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MathNet.Numerics, Version=3.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\mathnet-spatial\packages\MathNet.Numerics\lib\net40\MathNet.Numerics.dll</HintPath>
+    </Reference>
     <Reference Include="Messages">
       <HintPath>..\Messages\Messages.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
