MsgGen: revise assumptions about the relationship between the solution file and directories containing messagees
Previously, the following layout:
    ...common_parent/folder_a/the_solution_file.sln
    ...common_parent/.../msg_gen/
would require the manual addition of a file,
    ...common_parent/.../ROS_MESSAGES_ROOT.txt
that contained the relative path to the common_parent directory

Now, as long as all messages are contained in the union of the descendants of the directory containing the ROS.NET source, and those of the directory containing the .sln file, the location of the common parent does not need to be known.

--- a/msg_gen/msg_gen.csproj
+++ b/msg_gen/msg_gen.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
+    <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
