DynamicReconfigureSharp: add a specific readme for the Microsoft Expression Blend SDK dependency (including a download link)

--- a/DynamicReconfigureSharp/DynamicReconfigureSharp.csproj
+++ b/DynamicReconfigureSharp/DynamicReconfigureSharp.csproj
@@ -172,6 +172,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DynamicReconfigure\DynamicReconfigure.csproj">
