--- a/SimpleSubscriber/SimpleSubscriber/SimpleSubscriber.csproj
+++ b/SimpleSubscriber/SimpleSubscriber/SimpleSubscriber.csproj
@@ -23,7 +23,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -53,9 +53,6 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="XmlRpc_Wrapper">
-      <HintPath>..\..\XmlRpc_Wrapper\bin\x64\Debug\XmlRpc_Wrapper.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -104,6 +101,10 @@
     <ProjectReference Include="..\..\ROS_Comm\ROS_C-Sharp.csproj">
       <Project>{586A3B66-104A-4182-82C2-88DC120F10AC}</Project>
       <Name>ROS_C-Sharp</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\XmlRpc_Wrapper\XmlRpc_Wrapper.csproj">
+      <Project>{8B7DB66C-9C03-4078-9276-B6A760CD4C2C}</Project>
+      <Name>XmlRpc_Wrapper</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
