--- a/ROS_Comm/ROS_C-Sharp.csproj
+++ b/ROS_Comm/ROS_C-Sharp.csproj
@@ -217,14 +217,9 @@
       <Project>{1F3364C6-9DA3-4006-B83F-6D1335099895}</Project>
       <Name>Spatial</Name>
     </ProjectReference>
-    <ProjectReference Include="..\XmlRpc_Wrapper\XmlRpc_Wrapper.csproj">
-      <Project>{8B7DB66C-9C03-4078-9276-B6A760CD4C2C}</Project>
-      <Name>XmlRpc_Wrapper</Name>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-    </ProjectReference>
-    <ProjectReference Include="..\YAMLParser\YAMLParser.csproj">
-      <Project>{EFD1C674-0E1B-44E4-8AC9-DC9CCA7DCDCD}</Project>
-      <Name>YAMLParser</Name>
+    <ProjectReference Include="..\XmlRpc\XmlRpc.csproj">
+      <Project>{4be4eec3-8f44-43c6-b586-7b7312f2d687}</Project>
+      <Name>XmlRpc</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
