Porting XmlRpcServer. Should be replaced by HttpListener from the .NET framework

--- a/XmlRpc/XmlRpc.csproj
+++ b/XmlRpc/XmlRpc.csproj
@@ -46,6 +46,7 @@
     <Compile Include="XmlRpcClient.cs" />
     <Compile Include="XmlRpcDispatch.cs" />
     <Compile Include="XmlRpcServer.cs" />
+    <Compile Include="XmlRpcServerConnection.cs" />
     <Compile Include="XmlRpcSource.cs" />
     <Compile Include="XmlRpcUtil.cs" />
     <Compile Include="XmlRpcValue.cs" />
