ROS_ImageWPF: add a common interface shared by (Compressed)ImageControls, and update ImageControl's API to reflect the interface and changes made to CompressedImageControl

--- a/ROS_ImageUtils/ROS_ImageWPF.csproj
+++ b/ROS_ImageUtils/ROS_ImageWPF.csproj
@@ -160,6 +160,7 @@
     <Compile Include="GenericImage.xaml.cs">
       <DependentUpon>GenericImage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="iROSImage.cs" />
     <Compile Include="WindowScraper.cs" />
     <Page Include="CompressedImageControl.xaml">
       <Generator>MSBuild:Compile</Generator>
