--- a/XmlRpc_Wrapper/XmlRpc_Wrapper.csproj
+++ b/XmlRpc_Wrapper/XmlRpc_Wrapper.csproj
@@ -35,7 +35,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x86\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>DEBUG</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <CodeAnalysisLogFile>bin\Debug\XmlRpc_Wrapper.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
