--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,5 @@
 [submodule "mathnet-spatial"]
 	path = mathnet-spatial
 	url = https://github.com/uml-robotics/mathnet-spatial
+[submodule "Spatial"]
+	branch = master
